--- a/booking.html
+++ b/booking.html
@@ -439,7 +439,11 @@
     const cartContainer = document.getElementById('cart-container');
 
     function toggleCart() {
-      cartContainer.style.display = cartContainer.style.display === 'none' ? 'block' : 'none';
+      if (cartContainer.style.display === 'none' || cartContainer.style.display === '') {
+        cartContainer.style.display = 'block';
+      } else {
+        cartContainer.style.display = 'none';
+      }
     }
 
     document.querySelectorAll('.add-to-cart').forEach(button => {
