--- a/booking.html
+++ b/booking.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MyCafe Menu</title>
   <style>
-    body {
+     body {
       font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 20px;
@@ -23,6 +23,7 @@
       gap: 20px;
       max-width: 1200px;
       margin: 0 auto;
+      padding-bottom: 200px; /* Added space at bottom */
     }
 
     .menu-category {
@@ -32,6 +33,7 @@
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      margin-bottom: 20px; /* Added space between categories */
     }
 
     h2 {
@@ -73,7 +75,7 @@
 
     .cart-toggle-btn {
       position: fixed;
-      bottom: 90px;
+      bottom: 20px; /* Adjusted position */
       right: 20px;
       background-color: #f77f00;
       color: white;
@@ -97,7 +99,7 @@
       box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
       display: none;
       z-index: 1000;
-      max-height: 60vh;
+      max-height: 50vh; /* Limited height */
       overflow-y: auto;
     }
 
@@ -145,27 +147,19 @@
       cursor: pointer;
     }
 
-    .cart-total-bar {
-      position: fixed;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      background-color: #fff;
-      border-top: 1px solid #ccc;
-      padding: 10px 20px;
-      text-align: right;
-      font-weight: bold;
-      z-index: 998;
-    }
-
     @media (max-width: 768px) {
+      .menu-container {
+        padding-bottom: 250px; /* More space on mobile */
+      }
+      
       .menu-category {
-        min-width: 100%;
+        min-width: calc(100% - 40px); /* Better mobile width */
+        margin: 0 20px 20px 20px; /* Consistent margins */
       }
       
       .cart-toggle-btn {
-        bottom: 70px;
-        right: 10px;
+        bottom: 15px;
+        right: 15px;
         padding: 8px 16px;
         font-size: 14px;
       }
