--- a/booking.html
+++ b/booking.html
@@ -90,19 +90,22 @@
 
     .cart-container {
       position: fixed;
-      bottom: 0;
+      bottom: -100%; /* Start hidden below screen */
       left: 0;
       right: 0;
       background: white;
       padding: 15px;
       border-top: 2px solid #eee;
       box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
-      display: none;
       z-index: 1000;
-      max-height: 50vh; /* Limited height */
+      max-height: 50vh;
       overflow-y: auto;
+      transition: bottom 0.3s ease; /* Smooth animation */
     }
 
+    .cart-container.show {
+      bottom: 0; /* Show by moving up */
+    }
     .cart-item {
       display: flex;
       justify-content: space-between;
